fixed footer in inde page nad navbar collapse button

--- a/app/appLayout/CSS/main.css
+++ b/app/appLayout/CSS/main.css
@@ -6,6 +6,10 @@ body {
     color: white !important;
 }
 
+.footer-links {
+    color: skyblue !important;
+}
+
 .navbar-links:hover {
     color: skyblue;
     text-decoration: none;
